https://online.sbis.ru/opendoc.html?guid=35c83935-0843-4698-8ad1-d44d9d8cccd4

--- a/Controls-default-theme/_aliases.less
+++ b/Controls-default-theme/_aliases.less
@@ -118,11 +118,11 @@
 //
 // отступ от контрола до обводки валидации сверху и снизу
 
-@invalid_padding-vertical:          2px;
+@invalid_padding-vertical:          @offset_3xs;
 
 // отступ от контрола до обводки валидации справа и слева
 
-@invalid_padding-horizontal:        4px;
+@invalid_padding-horizontal:        @offset_2xs;
 
 
 
