--- a/Controls-default-theme/aliases/_buttons.less
+++ b/Controls-default-theme/aliases/_buttons.less
@@ -1,18 +1,18 @@
 //отступ между иконкой и надписью в кнопке.
 
-@icon-offset_button:            6px;
+@icon-offset_button:            @offset_xs;
 
 
 
 // Горизонтальные отступы до текста в кнопке
 
-@padding-horizontal_xs_button:                 12px;
-@padding-horizontal_s_button:                  12px;
-@padding-horizontal_m_button:                  12px;
-@padding-horizontal_l_button:                  24px;
-@padding-horizontal_xl_button:                 24px;
-@padding-horizontal_2xl_button:                24px;
-@padding-horizontal_default_button:            12px;
+@padding-horizontal_xs_button:                 @offset_m;
+@padding-horizontal_s_button:                  @offset_m;
+@padding-horizontal_m_button:                  @offset_m;
+@padding-horizontal_l_button:                  @offset_3xl;
+@padding-horizontal_xl_button:                 @offset_3xl;
+@padding-horizontal_2xl_button:                @offset_3xl;
+@padding-horizontal_default_button:            @offset_m;
 
 
 
