--- a/Controls-default-theme/aliases/_datePicker.less
+++ b/Controls-default-theme/aliases/_datePicker.less
@@ -18,7 +18,7 @@
 // Отступ контента заголовка от края слева
 @header_padding-left_datePicker:                         10px;
 // Отступ между кнопкой перелючения режимов выбора и заголовком окна или полями ввода
-@switcher_offset_datePicker:                             12px;
+@switcher_offset_datePicker:                             @offset_m;
 
 //Кнопка переключения режимов выбора
 @switcher_icon-size_datePicker:                          @icon-size_s;
@@ -27,7 +27,7 @@
 @switcher_active_icon-color_datePicker:                  @switcher_hover_icon-color_datePicker;
 
 // Отступ между кнопкой подтвержения выбора и другими элементами справа и слева
-@apply-button_offset_datePicker:                         12px;
+@apply-button_offset_datePicker:                         @offset_m;
 
 //Кнопка переключения к текущему периоду
 @home_icon-size_datePicker:                              @icon-size_s;
@@ -92,7 +92,7 @@
 // Цвет фона выделенного периода
 @yearlist_item_hover_background-color_datePicker:        #E6ECFA;
 // Отступы контента месяца внутри области месяца
-@yearlist_month_padding_datePicker:                      0 4px 4px 4px;
+@yearlist_month_padding_datePicker:                      0 @offset_2xs @offset_2xs @offset_2xs;
 // Ширина месяца
 @yearlist_month_width_datePicker:                        100px;
 // Высота месяца
@@ -111,7 +111,7 @@
 // Цвет нижней границы заголвка
 @calendar-header_border-bottom-color_datePicker:         #BDBDBD;
 // Отступ между левой границей и контентом
-@calendar-header_padding-left_datePicker:                12px;
+@calendar-header_padding-left_datePicker:                @offset_m;
 // Размер шрифта года в заголовке
 @current-year_font-size_datePicker:                      @font-size_l;
 // Цвет текста года в заголовке
@@ -133,7 +133,7 @@
 // Размер шрифта месяцев
 @monthnav_item_font-size_datePicker:                     @font-size_m;
 // Отступ между левой границей и месяцем
-@monthnav_item_padding-left_datePicker:                  12px;
+@monthnav_item_padding-left_datePicker:                  @offset_m;
 // Высота кнопки месяца
 @monthnav_item_height_datePicker:                        30px;
 // Цвет границ
