--- a/Controls-default-theme/aliases/_dragnDrop.less
+++ b/Controls-default-theme/aliases/_dragnDrop.less
@@ -5,7 +5,7 @@
 @border-thickness_draggingTemplate:               @border-thickness;
 @border-color_draggingTemplate:                   @border-color;
 @box-shadow_draggingTemplate:                     0 0 6px 0 rgba(0,0,0,0.2);
-@content_padding_draggingTemplate:                6px 6px 6px 0;
+@content_padding_draggingTemplate:                @offset_xs @offset_xs @offset_xs 0;
 @overflow_gradient_width_draggingTemplate:        24px;
 
 
@@ -15,7 +15,7 @@
 @image_placeholder_icon-color_draggingTemplate:   @unaccented_icon-color;
 @image_placeholder_icon-size_draggingTemplate:    @icon-size_l;
 @image_border-radius_draggingTemplate:            8px;
-@image_padding_draggingTemplate:                  4px 6px 4px 4px;
+@image_padding_draggingTemplate:                  @offset_2xs @offset_xs @offset_2xs @offset_2xs;
 @image_width_draggingTemplate:                    40px;
 @image_height_draggingTemplate:                   40px;
 
@@ -37,7 +37,7 @@
 @counter_text-color_draggingTemplate:             #ffffff;
 @counter_background-color_draggingTemplate:       #0055bb;
 @counter_border-radius_draggingTemplate:          @counter_height_draggingTemplate / 2;
-@counter_padding-horizontal_draggingTemplate:     6px;
+@counter_padding-horizontal_draggingTemplate:     @offset_xs;
 
 
 
