--- a/Controls-default-theme/aliases/_editableArea.less
+++ b/Controls-default-theme/aliases/_editableArea.less
@@ -6,9 +6,9 @@
 
 //Отступы
 
-@toolbar_button_offset_editableArea:                                        12px;
+@toolbar_button_offset_editableArea:                                        @offset_m;
 @toolbar_padding-right_editableArea:                                        0;
-@toolbar_padding-left_editableArea:                                         12px;
+@toolbar_padding-left_editableArea:                                         @offset_m;
 
 
 
