--- a/Controls-default-theme/aliases/_filter.less
+++ b/Controls-default-theme/aliases/_filter.less
@@ -3,8 +3,8 @@
 // Размеры и отступы
 
 @height_filterView:                                                         @inline_height_m;
-@item_spacing_filterView:                                                   4px;
-@filterButton_offset_filterView:                                            4px;              // отступ между кнопкой фильтра и областью значений
+@item_spacing_filterView:                                                   @offset_2xs;
+@filterButton_offset_filterView:                                            @offset_2xs;              // отступ между кнопкой фильтра и областью значений
 
 
 //Кнопка фильтров
