--- a/Controls-default-theme/aliases/_grid.less
+++ b/Controls-default-theme/aliases/_grid.less
@@ -4,11 +4,11 @@
 
 @icon-width_gridSortingSelector:                              @icon-size_s;
 @icon-height_gridSortingSelector:                             12px;
-@icon_offset_gridSortingSelector:                             8px;
+@icon_offset_gridSortingSelector:                             @offset_s;
 
 // Элементы выпадающего списка
 
-@item_icon_offset_gridSortingSelector:                        12px;
+@item_icon_offset_gridSortingSelector:                        @offset_m;
 @item_icon-color_unselected_gridSortingSelector:              @unaccented_icon-color;
 @item_icon-color_gridSortingSelector:                         @secondary_icon-color;
 @item_hover_icon-color_unselected_gridSortingSelector:        @secondary_hover_icon-color;
@@ -57,18 +57,18 @@
 
 @item_padding-top_default_grid:                               @item_padding-top_s_grid;
 @item_padding-top_s_grid:                                     3px;
-@item_padding-top_l_grid:                                     6px;
+@item_padding-top_l_grid:                                     @offset_xs;
 @item_padding-bottom_default_grid:                            @item_padding-bottom_s_grid;
 @item_padding-bottom_s_grid:                                  3px;
-@item_padding-bottom_l_grid:                                  6px;
+@item_padding-bottom_l_grid:                                  @offset_xs;
 
 // Горизонтальные отступы в ячейках
 
 @cell_padding-left_s_grid:                                    3px;
-@cell_padding-left_l_grid:                                    6px;
+@cell_padding-left_l_grid:                                    @offset_xs;
 @cell_padding-left_default_grid:                              @cell_padding-left_l_grid;
 @cell_padding-right_s_grid:                                   3px;
-@cell_padding-right_l_grid:                                   6px;
+@cell_padding-right_l_grid:                                   @offset_xs;
 @cell_padding-right_default_grid:                             @cell_padding-right_l_grid;
 
 // Размеры шрифта
@@ -83,12 +83,12 @@
 // Стрелка редактирования
 
 @edit-arrow_icon-size_grid:                                   @icon-size_s;
-@edit-arrow_offset_grid:                                      8px;
+@edit-arrow_offset_grid:                                      @offset_s;
 
 // Тэги (цветные треугольники)
 
-@tag_offset-vertical_gridView:                                16px;
-@tag_offset-horizontal_gridView:                              4px;
+@tag_offset-vertical_gridView:                                @offset_l;
+@tag_offset-horizontal_gridView:                              @offset_2xs;
 
 // Горизонтальный скролл
 
