--- a/Controls-default-theme/aliases/_heading.less
+++ b/Controls-default-theme/aliases/_heading.less
@@ -90,7 +90,7 @@
 
 @icon_s_offset_headingBack:                                                 3px;
 @icon_m_offset_headingBack:                                                 3px;
-@icon_l_offset_headingBack:                                                 2px;
+@icon_l_offset_headingBack:                                                 @offset_3xs;
 @icon_s_width_headingBack:                                                  9px;
 @icon_m_width_headingBack:                                                  9px;
 @icon_l_width_headingBack:                                                  10px;
