--- a/Controls-default-theme/aliases/_input.less
+++ b/Controls-default-theme/aliases/_input.less
@@ -65,7 +65,7 @@
 
 // Отступы
 
-@padding-horizontal_inputText:                                              4px;
+@padding-horizontal_inputText:                                              @offset_2xs;
 
 
 
@@ -73,7 +73,7 @@
 //
 // Отступы
 
-@padding-vertical_inputArea:                                                2px;
+@padding-vertical_inputArea:                                                @offset_3xs;
 
 // Высоты строк
 
@@ -95,7 +95,7 @@
 
 @trigger-color_inputPassword:                                               @unaccented_icon-color;
 @trigger_icon-size_inputPassword:                                           @icon-size_m;
-@trigger-offset_inputPassword:                                              4px;
+@trigger-offset_inputPassword:                                              @offset_2xs;
 
 
 
@@ -103,7 +103,7 @@
 //
 // Иконка "календарь"
 
-@trigger-offset_inputDate:                                                  8px;
+@trigger-offset_inputDate:                                                  @offset_s;
 @trigger_icon-size_inputDate:                                               @icon-size_s;
 @trigger_icon-color_inputDate:                                              @secondary_icon-color;
 @trigger_hover_icon-color_inputDate:                                        @secondary_hover_icon-color;
@@ -113,7 +113,7 @@
 //
 // Размеры и отступы
 @inline_height_default_label:                                               @inline_height_m;
-@offset-horizontal_label:                                                   8px;
+@offset-horizontal_label:                                                   @offset_s;
 @font-size_default_label:                                                   @font-size_m;
 
 // Цвета
