--- a/Controls-default-theme/aliases/_lookup.less
+++ b/Controls-default-theme/aliases/_lookup.less
@@ -11,7 +11,7 @@
 // Иконка вызова окна выбора
 
 @trigger_width_lookupInput:                                                     24px;
-@trigger_offset_lookupInput:                                                    4px;
+@trigger_offset_lookupInput:                                                    @offset_2xs;
 @trigger_icon-size_lookupInput:                                                 @icon-size_s;
 @trigger_icon-color_lookupInput:                                                @label_text-color;
 @trigger_hover_icon-color_lookupInput:                                          @secondary_hover_icon-color;
@@ -20,7 +20,7 @@
 // Кнопка сброса всех выбранных значений
 
 @reset-button_icon-size_lookupInput:                                            @icon-size_s;
-@reset-button_offset_lookupSelector:                                            4px;
+@reset-button_offset_lookupSelector:                                            @offset_2xs;
 @reset-button_icon-color_lookupInput:                                           @label_text-color;
 @reset-button_hover_icon-color_lookupInput:                                     @reset-button_hover_icon-color_searchInput;
 @reset-button_active_icon-color_lookupInput:                                    @reset-button_hover_icon-color_searchInput;
@@ -42,7 +42,7 @@
 // Кнопка "еще"
 @more-button_font-size_lookupSelector:                                          @font-size_xs;
 @more-button_text-color_lookupSelector:                                         @label_text-color;
-@more-button_offset_lookupSelector:                                             8px;
+@more-button_offset_lookupSelector:                                             @offset_s;
 
 // Текстовые элементы
 @text-color_lookupSelector:                                                     @link_text-color;
@@ -60,7 +60,7 @@
 
 // Размеры и отступы
 
-@item_offset_lookupSelectedCollection:                                          4px;
+@item_offset_lookupSelectedCollection:                                          @offset_2xs;
 @item_height_lookupSelectedCollection:                                          @inline_height_default;
 
 // Кнопка сброса одного значения
@@ -76,6 +76,6 @@
 @counter_shadow-blur_lookupSelectedCollection:                                  20px;
 @counter_font-size_lookupSelectedCollection:                                    @font-size_m;
 @counter_text-color_lookupSelectedCollection:                                   @label_text-color;
-@counter_offset_lookupSelectedCollection:                                       4px;
+@counter_offset_lookupSelectedCollection:                                       @offset_2xs;
 @counter_hover_text-color_lookupSelectedCollection:                             @link_hover_text-color;
 @counter_active_text-color_lookupSelectedCollection:                            @counter_hover_text-color_lookupSelectedCollection;
