--- a/Controls-default-theme/aliases/_moveDialog.less
+++ b/Controls-default-theme/aliases/_moveDialog.less
@@ -7,7 +7,7 @@
 @search_width_MoveDialog:                     184px;
 
 //Отступы
-@header_padding-vertical_MoveDialog:          8px;
-@search_offset_MoveDialog:                    12px;
-@root_padding-vertical_MoveDialog:            4px;
+@header_padding-vertical_MoveDialog:          @offset_s;
+@search_offset_MoveDialog:                    @offset_m;
+@root_padding-vertical_MoveDialog:            @offset_2xs;
 @root_offset_MoveDialog:                      @search_offset_MoveDialog;
