--- a/Controls-default-theme/aliases/_operations.less
+++ b/Controls-default-theme/aliases/_operations.less
@@ -26,11 +26,11 @@
 // Размеры и отступы
 
 @height_operationsPanel:                                                    30px;
-@loadingIndicator_offset-left_multiSelectorButton:                          12px;
+@loadingIndicator_offset-left_multiSelectorButton:                          @offset_m;
 
-@toolbar_padding-left_operationsPanel:                                      12px;
-@toolbar_padding-right_operationsPanel:                                     12px;
-@padding-right_operationsPanel:                                             12px;
+@toolbar_padding-left_operationsPanel:                                      @offset_m;
+@toolbar_padding-right_operationsPanel:                                     @offset_m;
+@padding-right_operationsPanel:                                             @offset_m;
 
 // Цвета фона
 
@@ -44,7 +44,7 @@
 
 @heading_font-size_operationsReportDialog:                                  @font-size_3xl;
 @heading_text-color_operationsReportDialog:                                 @secondary_text-color_heading;
-@heading_offset-bottom_operationsReportDialog:                              8px;
+@heading_offset-bottom_operationsReportDialog:                              @offset_s;
 
 // Сообщение
 
@@ -54,5 +54,5 @@
 // Список ошибок
 
 @errors_font-size_operationsReportDialog:                                   @font-size_default;
-@errors_padding-top_operationsReportDialog:                                 8px;
-@errors_item_offset_operationsReportDialog:                                 4px;
+@errors_padding-top_operationsReportDialog:                                 @offset_s;
+@errors_item_offset_operationsReportDialog:                                 @offset_2xs;
