--- a/Controls-default-theme/aliases/_paging.less
+++ b/Controls-default-theme/aliases/_paging.less
@@ -19,7 +19,7 @@
 @item_background-color_paging:                @background-color;
 @item_font-size_paging:                       @font-size_m;
 @item_padding-horizontal_paging:              3px;
-@item_offset_paging:                          2px;
+@item_offset_paging:                          @offset_3xs;
 @item_hover_background-color_paging:          @hover_background-color;
 @item_height_paging:                          @inline_height_xl;
 @item_box-shadow_paging:                      none;
@@ -38,5 +38,5 @@
 // Общие размеры и отступы
 
 @background-color_paging:                     @background-color;
-@padding-horizontal_paging:                   2px;
+@padding-horizontal_paging:                   @offset_3xs;
 @padding-vertical_paging:                     0;
