--- a/Controls-default-theme/aliases/_progress.less
+++ b/Controls-default-theme/aliases/_progress.less
@@ -15,10 +15,10 @@
 //
 // Размеры и отступы
 
-@padding-horizontal_progressStateIndicator:		 6px;
+@padding-horizontal_progressStateIndicator:		 @offset_xs;
 @item_height_progressStateIndicator:			 8px;
 @item_width_progressStateIndicator:				 6px;
-@item_offset_progressStateIndicator:			 2px;
+@item_offset_progressStateIndicator:			 @offset_3xs;
 
 // Цвета элементов
 
