--- a/Controls-default-theme/aliases/_propertyGrid.less
+++ b/Controls-default-theme/aliases/_propertyGrid.less
@@ -1,4 +1,4 @@
-@content_padding_propertyGrid:            12px;
-@editor_offset_propertyGrid:              8px;
-@group_padding-vertical_propertyGrid:     8px;
+@content_padding_propertyGrid:            @offset_m;
+@editor_offset_propertyGrid:              @offset_s;
+@group_padding-vertical_propertyGrid:     @offset_s;
 @label_width_propertyGrid:                50%;
