--- a/Controls-default-theme/aliases/_scroll.less
+++ b/Controls-default-theme/aliases/_scroll.less
@@ -2,7 +2,7 @@
 //
 // Размеры и отступы
 
-@padding_scrollbar:                                2px;
+@padding_scrollbar:                                @offset_3xs;
 
 // Размеры ползунка
 
@@ -31,7 +31,7 @@
 
 @track_thickness_scrollbar:                          1px;
 @track_color_scrollbar:                              #c1cde1;
-@track_offset_scrollbar:                             12px;
+@track_offset_scrollbar:                             @offset_m;
 
 
 
