--- a/Controls-default-theme/aliases/_search.less
+++ b/Controls-default-theme/aliases/_search.less
@@ -24,9 +24,9 @@
 
 // Отступы
 
-@padding-left_searchInput:                                                  12px;
-@padding-right_searchInput:                                                 8px;
-@trigger_offset_searchInput:                                                4px;
+@padding-left_searchInput:                                                  @offset_m;
+@padding-right_searchInput:                                                 @offset_s;
+@trigger_offset_searchInput:                                                @offset_2xs;
 
 // Иконка поиска
 
@@ -42,7 +42,7 @@
 @reset-button_icon-color_searchInput:                                       @label_text-color;
 @reset-button_hover_icon-color_searchInput:                                 @reset-button_icon-color_searchInput;
 @reset-button_active_icon-color_searchInput:                                @reset-button_icon-color_searchInput;
-@reset-button_offset-left_searchInput:                                     4px;
+@reset-button_offset-left_searchInput:                                     @offset_2xs;
 
 // Курсор
 
