--- a/Controls-default-theme/aliases/_shortDatePicker.less
+++ b/Controls-default-theme/aliases/_shortDatePicker.less
@@ -33,7 +33,7 @@
 // Размеры и отступы
 
 @item_line-height_shortDatePicker:                    32px;
-@quarterly_item-padding-left_shortDatePicker:         8px;
+@quarterly_item-padding-left_shortDatePicker:         @offset_s;
 
 // Текст
 
@@ -62,7 +62,7 @@
 // Размеры и отступы
 
 @yearselector_height_shortDatePicker:                 32px;
-@quarterly_yearselector_padding-left_shortDatePicker: 12px;
+@quarterly_yearselector_padding-left_shortDatePicker: @offset_m;
 
 // Цвет фона
 
@@ -111,7 +111,7 @@
 //
 // Галочки
 
-@item_checkbox_offset-right_shortDatePicker:          12px;
+@item_checkbox_offset-right_shortDatePicker:          @offset_m;
 
 // Стрелки - элементы списка в режиме годов
 
