--- a/Controls-default-theme/aliases/_slider.less
+++ b/Controls-default-theme/aliases/_slider.less
@@ -42,12 +42,12 @@
 
 // Всплывающая подсказка
 
-@tooltip_padding-horizontal_slider:                                         8px;
-@tooltip_padding-vertical_slider:                                           4px;
+@tooltip_padding-horizontal_slider:                                         @offset_s;
+@tooltip_padding-vertical_slider:                                           @offset_2xs;
 @tooltip_background-color_slider:                                           @marker_background-color_slider;
 @tooltip_border-thickness_slider:                                           0;
 @tooltip_border-color_slider:                                               transparent;
 @tooltip_border-radius_slider:                                              4px;
 @tooltip_box-shadow_slider:                                                 0 0 6px 0 #999999;
 @tooltip_font-size_slider:                                                  @font-size_l;
-@tooltip_offset_slider:                                                     2px;
+@tooltip_offset_slider:                                                     @offset_3xs;
