--- a/Controls-default-theme/aliases/_suggest.less
+++ b/Controls-default-theme/aliases/_suggest.less
@@ -1,6 +1,6 @@
 // Переменные для автодополнения с полем поиска
 
 @box-shadow-size_suggestSearch:                         0 0 6px 0;
-@padding-top_suggestSearch:                             8px;
-@padding-left_suggestSearch:                            12px;
+@padding-top_suggestSearch:                             @offset_s;
+@padding-left_suggestSearch:                            @offset_m;
 @tabs_offset-top_suggestSearch:                         0;
