--- a/Controls-default-theme/aliases/_suggestPopup.less
+++ b/Controls-default-theme/aliases/_suggestPopup.less
@@ -13,24 +13,24 @@
 @showall_text-color_suggest:                            @link_text-color;
 @showall_hover_text-color_suggest:                      @link_hover_text-color;
 @showall_active_text-color_suggest:                     @link_hover_text-color;
-@showall_padding-horizontal_suggest:                    8px;
+@showall_padding-horizontal_suggest:                    @offset_s;
 @showall_font-size_suggest:                             @font-size_m;
 
 @more_font-size_suggest:                                @font-size_m;
 @more_text-color_suggest:                               @link_text-color;
 @more_hover_text-color_suggest:                         @link_hover_text-color;
 @more_active_text-color_suggest:                        @link_hover_text-color;
-@more_padding-horizontal_suggest:                       8px;
+@more_padding-horizontal_suggest:                       @offset_s;
 
 // Кнопка сброса
 
 @reset-button_icon-size_suggest:                        @icon-size_s;
 @reset-button_icon-color_suggest:                       #CCC;
-@reset-button_offset_suggest:                           4px;
+@reset-button_offset_suggest:                           @offset_2xs;
 
 // Дополнительные элементы
 
-@tabs_offset-bottom_suggest:                            8px;
-@tabs_offset-top_suggest:                               8px;
-@misspell_padding-horizontal_suggest:                   12px;
-@spinner_offset_suggest:                                4px;
+@tabs_offset-bottom_suggest:                            @offset_s;
+@tabs_offset-top_suggest:                               @offset_s;
+@misspell_padding-horizontal_suggest:                   @offset_m;
+@spinner_offset_suggest:                                @offset_2xs;
