--- a/Controls-default-theme/aliases/_toggle.less
+++ b/Controls-default-theme/aliases/_toggle.less
@@ -53,7 +53,7 @@
 // Текст
 
 @font-size_switcher:                                                        @font-size_m;
-@text_offset_switcher:                                                      6px;
+@text_offset_switcher:                                                      @offset_xs;
 @text-color_switcher:                                                       @text-color;
 @unselected_text-color_switcher:                                            @unaccented_text-color;
 @readonly_text-color_switcher:                                              @text-color;
@@ -73,7 +73,7 @@
 @marker-box_size_switcher:                                                  12px;
 @marker-box_border-color_switcher:                                          @border-color;
 
-@marker-size_switcher:                                                      6px;
+@marker-size_switcher:                                                      @offset_xs;
 @marker_color_switcher:                                                     @marker_color;
 @readonly_marker_color_switcher:                                            @readonly_marker-color;
 @readonly_marker-box_border-color_switcher:                                 #E4E4E4;
@@ -155,17 +155,17 @@
 
 
 // Переменные для группы чекбоксов
-@item_offset_checkbox-group:                                                8px;
-@item_offset_right_checkbox-group:                                          12px;
-@hierarchy_padding-left_checkbox-group:                                     24px;
+@item_offset_checkbox-group:                                                @offset_s;
+@item_offset-right_checkbox-group:                                          @offset_m;
+@hierarchy_padding-left_checkbox-group:                                     @offset_3xl;
 
 
 
 // Переменные для группы радиокнопок
 //
 // Размер и отступы
-@item_offset-vertical_radioGroup:                                           8px;
-@item_offset-horizontal_radioGroup:                                         12px;
+@item_offset-vertical_radioGroup:                                           @offset_s;
+@item_offset-horizontal_radioGroup:                                         @offset_m;
 @item_height_radioGroup:                                                    @inline_height_m;
 
 // Текст
