--- a/Controls-default-theme/aliases/_toolbars.less
+++ b/Controls-default-theme/aliases/_toolbars.less
@@ -1,7 +1,7 @@
 // Отступы между элементами
 
-@item_offset_s_toolbar:                                                     12px;
-@item_offset_l_toolbar:                                                     16px;
+@item_offset_s_toolbar:                                                     @offset_m;
+@item_offset_l_toolbar:                                                     @offset_l;
 
 // цвет кнопки меню тулбара при наведении
 @icon-color_hover_toolbar:                                                  @secondary_hover_icon-color;
