--- a/Controls-default-theme/aliases/_columns.less
+++ b/Controls-default-theme/aliases/_columns.less
@@ -7,8 +7,8 @@
 
 // Отступы между элементами
 
-@item_offset-vertical_columns:                    8px;
-@item_offset-horizontal_columns:                  16px;
+@item_offset-vertical_columns:                    @offset_s;
+@item_offset-horizontal_columns:                  @offset_l;
 
 // Тень
 
@@ -24,9 +24,9 @@
 
 // Отступы чекбокса
 
-@checkbox_offset-top_columns:                     6px;
+@checkbox_offset-top_columns:                     @offset_xs;
 @checkbox_offset-right_columns:                   3px;
 @checkbox_offset-bottom_columns:                  3px;
-@checkbox_offset-left_columns:                    8px;
+@checkbox_offset-left_columns:                    @offset_s;
 
 @height_itemActions_columns:                      32px;
