--- a/Controls-default-theme/aliases/_dateRange.less
+++ b/Controls-default-theme/aliases/_dateRange.less
@@ -1,7 +1,7 @@
 // Переменные для ввода интервала дат
 
 @dash_length_dateRangeInput:                 2px;
-@dash_padding-horizontal_dateRangeInput:     4px;
+@dash_padding-horizontal_dateRangeInput:     @offset_2xs;
 @dash_thickness_dateRangeInput:              1px;
 @dash_color_dateRangeInput:                  @text-color;
 
