--- a/Controls-default-theme/aliases/_dropdown.less
+++ b/Controls-default-theme/aliases/_dropdown.less
@@ -3,7 +3,7 @@
 @trigger-color_combobox:                           @secondary_icon-color_toggleSeparator;
 @trigger-color_hover_combobox:                     @secondary_hover_icon-color_toggleSeparator;
 @trigger_icon-size_combobox:                       @icon-size_toggleSeparator;
-@trigger_padding-right_combobox:                   4px;
+@trigger_padding-right_combobox:                   @offset_2xs;
 
 
 
@@ -17,7 +17,7 @@
 
 @height_dropdownSelector:                          @inline_height_default;
 @font-size_default_dropdownSelector:               @font-size_default;
-@icon_offset_dropdownSelector:                     6px;
+@icon_offset_dropdownSelector:                     @offset_xs;
 
 // Переменные для валидации выбранного значения выпадающего списка
 
