--- a/Controls-default-theme/aliases/_tabs.less
+++ b/Controls-default-theme/aliases/_tabs.less
@@ -4,7 +4,7 @@
 
 @item_height_tabs:                                                          31px;
 @item_max-width_tabs:                                                       630px;
-@padding-horizontal_tabs:                                                   12px;
+@padding-horizontal_tabs:                                                   @offset_m;
 
 // Размеры шрифта
 
