--- a/Controls-default-theme/aliases/_treeGrid.less
+++ b/Controls-default-theme/aliases/_treeGrid.less
@@ -1,22 +1,22 @@
-@expander_s_padding-top_treeGrid:                                 4px;
-@expander_s_padding-right_treeGrid:                               4px;
-@expander_s_padding-bottom_treeGrid:                              4px;
+@expander_s_padding-top_treeGrid:                                 @offset_2xs;
+@expander_s_padding-right_treeGrid:                               @offset_2xs;
+@expander_s_padding-bottom_treeGrid:                              @offset_2xs;
 @expander_s_padding-left_treeGrid:                                0;
 
-@expander_m_padding-top_treeGrid:                                 4px;
+@expander_m_padding-top_treeGrid:                                 @offset_2xs;
 @expander_m_padding-right_treeGrid:                               10px;
-@expander_m_padding-bottom_treeGrid:                              4px;
-@expander_m_padding-left_treeGrid:                                4px;
+@expander_m_padding-bottom_treeGrid:                              @offset_2xs;
+@expander_m_padding-left_treeGrid:                                @offset_2xs;
 
-@expander_l_padding-top_treeGrid:                                 4px;
+@expander_l_padding-top_treeGrid:                                 @offset_2xs;
 @expander_l_padding-right_treeGrid:                               14px;
-@expander_l_padding-bottom_treeGrid:                              4px;
-@expander_l_padding-left_treeGrid:                                8px;
+@expander_l_padding-bottom_treeGrid:                              @offset_2xs;
+@expander_l_padding-left_treeGrid:                                @offset_s;
 
-@expander_xl_padding-top_treeGrid:                                4px;
+@expander_xl_padding-top_treeGrid:                                @offset_2xs;
 @expander_xl_padding-right_treeGrid:                              18px;
-@expander_xl_padding-bottom_treeGrid:                             4px;
-@expander_xl_padding-left_treeGrid:                               12px;
+@expander_xl_padding-bottom_treeGrid:                             @offset_2xs;
+@expander_xl_padding-left_treeGrid:                               @offset_m;
 
 @expander_default_padding-top_treeGrid:                           @expander_s_padding-top_treeGrid;
 @expander_default_padding-right_treeGrid:                         @expander_s_padding-right_treeGrid;
@@ -54,7 +54,7 @@
 @node-footer_max-font-size_treeGrid:                              @font-size_m;
 @node-footer_more_font-size_treeGrid:                             @font-size_l;
 @node-footer_min-heght:                                           25px;
-@node-footer_padding-top-s:                                       2px;
+@node-footer_padding-top-s:                                       @offset_3xs;
 
 //Драг н дроп
 
